updated image tag staging-v1.0-4 for service crud: Updated Docker image tag to staging-v1.0-4

--- a/crud-staging/CRUD-APP/values.yaml
+++ b/crud-staging/CRUD-APP/values.yaml
@@ -7,7 +7,7 @@ app:
 # Image configuration
 image:
   repository: samuvel/crud-app
-  tag: "null-90"
+  tag: "staging-v1.0-4"
   pullPolicy: IfNotPresent
 
 # Kubernetes deployment configuration
