--- a/vars/Jenkinsfile
+++ b/vars/Jenkinsfile
@@ -59,4 +59,12 @@ pipeline {
             }
         }
     }
+    post {
+        always {
+            script {
+                cleanWorkspace(excludePatterns: ['reports', 'logs'], workspaceDir: pwd())
+            }
+        }
+    }
+
 }
