--- a/vars/Jenkinsfile
+++ b/vars/Jenkinsfile
@@ -6,6 +6,7 @@ pipeline {
         SONAR_CREDENTIAL    =''
         GIT_CREDENTIAL      =''
         GIT_REPO_URLS       =''
+        RELEAS_GIT_REPO     =''
         DOCKER_REGISTRY     =''
         DOCKER_IMAGE_TAG    =''
         CLEANUP_DOCKER_IMAGES=true
@@ -86,6 +87,21 @@ pipeline {
                         registryCredentialsId: env.DOCKER_CREDENTIALS
 
                     ])
+                }
+            }
+        }
+        stage('Git Release') {
+            steps {
+                script {
+                    createOrUpdateGitRelease(
+                        gitRepo: env.RELEAS_GIT_REPO,
+                        releaseTag: env.DOCKER_IMAGE_TAG,
+                        artifactName: env.ARTIFACT_NAME,
+                        sourcePath: env.SOURCE_PATH,
+                        githubTokenId: env.GIT_CREDENTIAL,
+                        releaseName: 'My Release',
+                        releaseDescription: 'This is the release description'
+                    )
                 }
             }
         }
