--- a/vars/Jenkinsfile
+++ b/vars/Jenkinsfile
@@ -172,7 +172,7 @@ pipeline {
             script {
                 archiveArtifacts artifacts: 'trivy-reports/*.json', allowEmptyArchive: true
                 archiveArtifacts artifacts: 'sonar-reports/*.json', allowEmptyArchive: true
-                sendEmailNotification(
+                sendEmailWithAttachment(
                     BUILD_STATUS: currentBuild.currentResult,
                     BUILD_ID: env.BUILD_ID,
                     BUILD_NUMBER: env.BUILD_NUMBER,
