--- a/vars/Jenkinsfile
+++ b/vars/Jenkinsfile
@@ -53,8 +53,7 @@ pipeline {
                     }
                     def commandSet = [
                         // Install Node.js v14 and npm
-                        'curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash -',
-                        'sudo apt-get install -y nodejs',
+                        "apt-get update && apt-get install -y nodejs npm",
                         // npm install for ui                        
                         "cd ../../navigator-ui && npm i --force",
                         "cd ../../navigator-ui && npm run build --force",
